# Flows1D0D3D

./: .clang-format  .gitignore  CMakeLists.txt  README.md  format.sh  setup.py
applications/: CMakeLists.txt
applications/sensitivity/: CMakeLists.txt
applications/sensitivity/test1/: CMakeLists.txt  main.cpp
apps/: 3D_model.cpp  CMakeLists.txt  abstract_33_vessels_geometry.cpp  advection_implicit.cpp  animation.py  breast_geometry.cpp  calibration.cpp  combined_geometry.cpp  convergence_study.cpp  darcy_flow_regularized_outlets.cpp  darcy_test_heterogeneous.cpp  explicit_implicit_scheme.cpp  explicit_implicit_with_transport.cpp  extract_time_and_pressures.py  full_1D0D3D_model.cpp  full_1D0D3D_model_pkj.cpp  implicit_transport.cpp  implicit_transport_with_0d.cpp  implicit_transport_with_artificial_0d.cpp  legacy_vtk_reader.cpp  linear_flow.cpp  linear_flow_aneurysm_geometry.cpp  linear_flow_breast_geometry.cpp  linear_flow_characteristics.cpp  linearized_1D0D3D_model.cpp  multiscale_time_3d1d0d.cpp  nonlinear_1d_solver.cpp  nonlinear_flow_bifurcation.cpp  nonlinear_flow_line.cpp  partioning_perfusion.cpp  partioning_perfusion2.cpp  plot_pressure_amplitudes_in_0d_models.py  plot_qoi_3d.py  plot_vessel_tips.py  plot_vessels.py  simple_linearized_solver.cpp  simple_linearized_solver_coupled.cpp  test_nifti_reader.cpp  tissue_domain_darcy.cpp  transport_test.cpp  (+6 more)
models/: CMakeLists.txt  Network_33_Vessels_test.txt  main.cpp
models/AvaFV/: CMakeLists.txt  model.cpp  model.hpp
models/AvaFV/driver/: CMakeLists.txt  main.cpp
models/AvaFV/inp/: inp.cpp  inp.hpp
models/AvaFV/systems/: abstraction.hpp  grad_taf.cpp  grad_taf.hpp  hypoxic.cpp  hypoxic.hpp  necrotic.cpp  necrotic.hpp  nutrient.cpp  nutrient.hpp  systems.cpp  systems.hpp  taf.cpp  taf.hpp  tumor.cpp  tumor.hpp
models/AvaFV/util/: util.cpp  util.hpp
models/NetFC/: CMakeLists.txt  model.cpp  model.hpp
models/NetFC/driver/: CMakeLists.txt  main.cpp
models/NetFC/inp/: inp.cpp  inp.hpp
models/NetFC/net/: TAF.cpp  graph_structure.hpp  list_structure.hpp  netUtil.cpp  netUtil.hpp  network.cpp  network.hpp  network_data_structure.cpp  network_growth_processes.cpp  nodes.hpp  prolific_cells.cpp
models/NetFC/systems/: ecm.cpp  hypoxic.cpp  mde.cpp  necrotic.cpp  nutrient.cpp  pressure.cpp  systems.hpp  taf.cpp  tumor.cpp  velocity.cpp
models/NetFC/util/: util.hpp
models/NetFCFVFE/: CMakeLists.txt  model.cpp  model.hpp
models/NetFCFVFE/driver/: CMakeLists.txt  main.cpp
models/NetFCFVFE/net/: TAF.cpp  graph_structure.hpp  list_structure.hpp  netUtil.cpp  netUtil.hpp  network.cpp  network.hpp  network_data_structure.cpp  network_growth_processes.cpp  nodes.hpp  prolific_cells.cpp
models/NetFCFVFE/systems/: ecm.cpp  ecm.hpp  ghosting_functor.cpp  ghosting_functor.hpp  grad_taf.cpp  grad_taf.hpp  hypoxic.cpp  hypoxic.hpp  mde.cpp  mde.hpp  necrotic.cpp  necrotic.hpp  nutrient.cpp  nutrient.hpp  pressure.cpp  pressure.hpp  prolific.cpp  prolific.hpp  systems.hpp  taf.cpp  taf.hpp  tumor.cpp  tumor.hpp  velocity.cpp  velocity.hpp
models/NetFV/: CMakeLists.txt  model.cpp  model.hpp
models/NetFV/driver/: CMakeLists.txt  main.cpp
models/NetFV/inp/: inp.cpp  inp.hpp
models/NetFV/net/: graph_structure.hpp  list_structure.hpp  network.cpp  network.hpp  nodes.hpp
models/NetFVFE/: CMakeLists.txt  model.cpp  model.hpp
models/NetFVFEExp/: CMakeLists.txt  model.cpp  model.hpp
models/NetPresNut/: CMakeLists.txt  model.cpp  model.hpp
models/NoisyCH/: CMakeLists.txt  model.cpp  model.hpp
models/TwoSpecies/: CMakeLists.txt  model.cpp  model.hpp
models/macrocirculation/: CMakeLists.txt  README.md
models/tests/: CMakeLists.txt  test.cpp  tests.hpp
models/utils/: CMakeLists.txt  csv.hpp  logger.cpp  logger.hpp  modelUtil.hpp  qoi.hpp  random_dist.hpp  time_measurement.h  utilCompare.hpp  utilIO.cpp  utilIO.hpp  utilLibs.hpp  utils.cpp  utils.hpp
python/: CMakeLists.txt
python/examples/: _utils.py  averages.py  example_script.py  full_1d0d3d_cap_and_tissue.py  full_1d0d3d_cap_and_tissue_implicit.py  full_1d0d3d_coupling.py  implicit_pressure_solver.py  main_flow.py  main_flow_without_3d.py  main_transport.py  parameters.py  plot_amount_of_substance.py  plot_averages.py  plot_flow_on_edge.py  run_implicit_pressure_solver.py  runtime_1d_dt.py  runtime_3d_dt.py  runtime_comparison.py  runtime_comparison_v2.py  simple_solver.py  tip_pressures.json  tip_pressures1.json  tip_pressures2.json  transport_solver.py
python/src/: main.cpp
src/: CMakeLists.txt
src/macrocirculation/: 0d_boundary_conditions.cpp  0d_boundary_conditions.hpp  0d_boundary_conditions_old.cpp  assembly_system.cpp  base_model.hpp  boundary_condition_readers.cpp  boundary_condition_readers.hpp  communicator.cpp  communicator.hpp  compress_io.hpp  coupled_explicit_implicit_1d_solver.cpp  coupled_explicit_implicit_1d_solver.hpp  csv_vessel_tip_writer.cpp  csv_vessel_tip_writer.hpp  dof_map.cpp  dof_map.hpp  edge_boundary_evaluator.cpp  edge_boundary_evaluator.hpp  embedded_graph_reader.cpp  embedded_graph_reader.hpp  errornorm.cpp  errornorm.hpp  explicit_nonlinear_flow_solver.cpp  explicit_nonlinear_flow_solver.hpp  explicit_transport_solver.cpp  explicit_transport_solver.hpp  fe_type.cpp  fe_type.hpp  flow_aq_upwind_evaluator.cpp  flow_aq_upwind_evaluator.hpp  flow_upwind_evaluator.cpp  flow_upwind_evaluator.hpp  gmm_legacy_facade.hpp  graph_csv_writer.cpp  graph_csv_writer.hpp  graph_flow_and_concentration_writer.cpp  graph_flow_and_concentration_writer.hpp  graph_partitioner.cpp  graph_partitioner.hpp  graph_pvd_writer.cpp  (+68 more)
tests/: CMakeLists.txt  run_libmesh_tests.cpp  run_tests.cpp  test_boundary_evaluator.cpp  test_buffer_system.cpp  test_linear_characteristic_bcs.cpp  test_linear_solver_bitwise.cpp  test_nonlinear_characteristic_bcs.cpp  test_nonlinear_solver_bitwise.cpp  test_send_and_receive_buffers.cpp  test_upwinding_formulas_linearized_flow.cpp  test_vessel_formulas.cpp
tests/new_model/: test.sh
tests/test_exec/: CMakeLists.txt
tests/util/: create_3_vessel_network.cpp  create_3_vessel_network.hpp
(+617 files in other folders)
